Fix: footer on mobile

--- a/assets/scss/dcf-components/_generic.scss
+++ b/assets/scss/dcf-components/_generic.scss
@@ -18,6 +18,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 100px;
+  overflow: hidden;
 }
 
 .main-title {
