--- a/assets/scss/dcf-components/layouts/_layout-proposal.scss
+++ b/assets/scss/dcf-components/layouts/_layout-proposal.scss
@@ -1,5 +1,6 @@
 .layout-proposal {
-  padding: 3em 0 4em 0;
+  padding-top: 3em;
+  padding-bottom: 4em;
 
   .is-prop-subform .box {
     border-top: solid 1px $theme-shadow;
